--- a/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
+++ b/client/src/app/modules/root-common/components/plan-details/plan-details.component.html
@@ -15,88 +15,178 @@
 
 <section class="checkout-area pt-100 pb-70">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="checkout-user">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span>Returning customer? <a href="login.html">Click here to Log In</a></span>
-                </div>
-                <form>
+        <form [formGroup]="userForm" (ngSubmit)="submitForm()">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="checkout-user">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Returning customer? <a routerLink="/user/login"
+                                (click)="scrollTop()">Click here to Log In</a></span>
+                    </div>
+
                     <div class="billing-details">
                         <h3 class="title">Billing details</h3>
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Full Name <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <input formControlName="fullName" type="text" class="form-control">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Email Address <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <input formControlName="email" type="email" class="form-control">
                                 </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group">
+                                    <label>Set Password <span class="required">*</span></label>
+                                    <input formControlName="password" type="password" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group">
+                                    <label>Confirm Password <span class="required">*</span></label>
+                                    <input formControlName="confirmPassword" type="password" class="form-control">
+                                </div>
+                            </div>
+                            <div *ngIf="userForm.controls['confirmPassword'].errors?.['confirmedValidator'] || userForm.controls['password'].errors?.['confirmedValidator']">
+                                Passwords do not match
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Phone <span class="required">*</span></label>
-                                    <input type="email" class="form-control">
+                                    <input formControlName="phone" type="text" class="form-control">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
-                                    <label>Country</label>
-                                    <input type="text" class="form-control">
+                                    <label>Your Goals <span class="required">*</span></label>
+                                    <input formControlName="goals" type="text" class="form-control">
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-12 col-md-12">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="form-group">
-                                    <label>Country</label>
-                                    <input type="text" class="form-control">
+                                    <label>Age <span class="required">*</span></label>
+                                    <input formControlName="age" type="text" class="form-control">
                                 </div>
-                            </div> -->
-                            <!-- <div class="col-lg-12 col-md-6">
+                            </div>
+                            <div class="col-lg-4 col-md-6">
                                 <div class="form-group">
-                                    <label>Address <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <label>Height <span class="required">*</span></label>
+                                    <input formControlName="height" type="text" class="form-control">
                                 </div>
-                            </div> -->
-                            <div class="col-lg-12 col-md-6">
+                            </div>
+                            <div class="col-lg-4 col-md-6">
                                 <div class="form-group">
-                                    <label>Town / City <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <label>Weight <span class="required">*</span></label>
+                                    <input formControlName="weight" type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group radio-group">
+                                    <label>Gender <span class="required">*</span></label>
+                                    <div class="payment-box">
+                                        <div class="payment-method">
+                                            <p class="radio-group">
+                                                <input type="radio"
+                                                    id="male" value="Male"
+                                                    formControlName="gender">
+                                                <label
+                                                    for="male">Male</label>
+                                                <input type="radio"
+                                                    id="female" value="Female"
+                                                    formControlName="gender">
+                                                <label
+                                                    for="female">Female</label>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group radio-group">
+                                    <label>Lose/Gain <span class="required">*</span></label>
+                                    <div class="payment-box">
+                                        <div class="payment-method">
+                                            <p class="radio-group">
+                                                <input type="radio"
+                                                    id="lose" value="Lose" formControlName="loseOrGain">
+                                                <label
+                                                    for="lose">Lose</label>
+                                                <input type="radio"
+                                                    id="gain" value="Gain" formControlName="loseOrGain">
+                                                <label
+                                                    for="gain">Gain</label>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group radio-group">
+                                    <label>Going gym? <span class="required">*</span></label>
+                                    <div class="payment-box">
+                                        <div class="payment-method">
+                                            <p class="radio-group">
+                                                <input type="radio"
+                                                    id="yes" value="Yes" formControlName="goingGym">
+                                                <label
+                                                    for="yes">Yes</label>
+                                                <input type="radio"
+                                                    id="no" value="No" formControlName="goingGym">
+                                                <label
+                                                    for="no">No</label>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group radio-group">
+                                    <label>Food Type <span class="required">*</span></label>
+                                    <div class="payment-box">
+                                        <div class="payment-method">
+                                            <p class="radio-group">
+                                                <input type="radio"
+                                                    id="veg" value="Veg" formControlName="foodType">
+                                                <label
+                                                    for="veg">Veg</label>
+                                                <input type="radio"
+                                                    id="non-veg" value="Non-Veg" formControlName="foodType">
+                                                <label
+                                                    for="non-veg">Non-veg</label>
+                                                <input type="radio"
+                                                    id="just-egg" value="Just-egg" formControlName="foodType">
+                                                <label
+                                                    for="just-egg">Just egg</label>
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
-                                    <label>State / Province <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <label>Any Medical Issue</label>
+                                    <input formControlName="medicalIssue" type="text" class="form-control">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
-                                    <label>Postcode / Zip <span class="required">*</span></label>
-                                    <input type="text" class="form-control">
+                                    <label>Any food you are having allergy with?</label>
+                                    <input formControlName="foodAllergy" type="text" class="form-control">
                                 </div>
                             </div>
-                           
-                            <!-- <div class="col-lg-12 col-md-12">
-                                <div class="form-check">
-                                    <input type="checkbox" class="form-check-input" id="create-an-account">
-                                    <label class="form-check-label" for="create-an-account">Create an
-                                        account?</label>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
-                </form>
-            </div>
+                </div>
 
-            <div class="col-lg-4">
-                <div class="billing-sildbar pl-20">
-                    <div class="billing-totals">
-                        <h3>Checkout Summary</h3>
-                        <!-- <div class="shop-desc pl-20">
+                <div class="col-lg-4">
+                    <div class="billing-sildbar pl-20">
+                        <div class="billing-totals">
+                            <h3>Checkout Summary</h3>
+                            <!-- <div class="shop-desc pl-20">
                             <div class="input-count-area">
                                 <h3>Plan Duration(in months)</h3>
                                 <div class="input-counter">
@@ -106,39 +196,55 @@
                                 </div>
                             </div>
                         </div> -->
-                        <ul>
-                            <li>Plan Price <span>{{ selectedPricingPlan['planPrice'] | currency:"INR":"symbol":'2.0' }}</span></li>
-                            <!-- <li>Shipping <span>$30.00</span></li>
+                            <ul>
+                                <li>Plan Price <span>{{
+                                        selectedPricingPlan['planPrice'] |
+                                        currency:"INR":"symbol":'2.0' }}</span></li>
+                                <!-- <li>Shipping <span>$30.00</span></li>
                             <li>Coupon <span>$20.00</span></li>
                             <li>Total <span><b>$160.00</b></span></li> -->
-                            <li>Payable Total <span><b>{{ selectedPricingPlan['planPrice'] | currency:"INR":"symbol":'2.0' }}</b></span></li>
-                        </ul>
-                    </div>
-                    <div class="payment-box">
-                        <div class="payment-method">
-                            <h3>Payment Method</h3>
-                            <p>
-                                <input type="radio" id="direct-bank-transfer" name="radio-group" checked>
-                                <label for="direct-bank-transfer">Direct Bank Transfer</label>
-                                Make your payment directly into our bank account. Please use your Order
-                                ID as the payment reference. Your order will not be shipped until the funds have
-                                cleared in our account.
-                            </p>
-                            <p>
-                                <input type="radio" id="paypal" name="radio-group">
-                                <label for="paypal">PayPal</label>
-                            </p>
-                            <p>
-                                <input type="radio" id="cash-on-delivery" name="radio-group">
-                                <label for="cash-on-delivery">Cash On Delivery</label>
-                            </p>
+                                <li>Payable Total <span><b>{{
+                                            selectedPricingPlan['planPrice'] |
+                                            currency:"INR":"symbol":'2.0' }}</b></span></li>
+                            </ul>
                         </div>
-                        <a (click)="order()" class="default-btn">
-                            Place to Order
-                        </a>
+                        <div class="payment-box">
+                            <div class="payment-method">
+                                <h3>Payment Method</h3>
+                                <p>
+                                    <input type="radio"
+                                        id="direct-bank-transfer"
+                                        name="radio-group" checked>
+                                    <label for="direct-bank-transfer">Direct
+                                        Bank
+                                        Transfer</label>
+                                    Make your payment directly into our bank
+                                    account. Please use your Order
+                                    ID as the payment reference. Your order will
+                                    not
+                                    be shipped until the funds have
+                                    cleared in our account.
+                                </p>
+                                <p>
+                                    <input type="radio" id="paypal"
+                                        name="radio-group">
+                                    <label for="paypal">PayPal</label>
+                                </p>
+                                <p>
+                                    <input type="radio" id="cash-on-delivery"
+                                        name="radio-group">
+                                    <label for="cash-on-delivery">Cash On
+                                        Delivery</label>
+                                </p>
+                            </div>
+                            <button class="default-btn" type="submit">
+                                    Place to Order
+                            </button>
+                           
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
 </section>
