--- a/client/src/app/shared/components/resusable-components/pricing-plan/pricing-plan.component.html
+++ b/client/src/app/shared/components/resusable-components/pricing-plan/pricing-plan.component.html
@@ -20,7 +20,7 @@
                         <li><i class='bx bx-check'></i> 24/7 Support</li> -->
                     </ul>
                     <div class="price-btn-area text-center">
-                        <a [routerLink]="plan['planRouterLink']" (click)="scrollTop()" class="default-btn">{{ plan['selectPlanBtnName'] }}</a>
+                        <a [routerLink]="plan['planUrlLink']" (click)="scrollTop()" class="default-btn">{{ plan['selectPlanBtnName'] }}</a>
                     </div>
                 </div>
             </div>
