--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -109,7 +109,7 @@
                                 About
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" *ngIf="isLoggedIn()">
                             <a href="#" class="nav-link">
                                 Account
                                 <i class='bx bx-chevron-down'></i>
@@ -129,6 +129,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">Shop Details</a>
+                                </li>
+                                <li class="nav-item" (click)="onLogOut()">
+                                    <a class="nav-link">Logout</a>
                                 </li>
                             </ul>
                         </li>
@@ -163,6 +166,11 @@
                         <li class="nav-item">
                             <a routerLink="contact" (click)="scrollTop()" routerLinkActive="active" class="nav-link">
                                 Contact Us
+                            </a>
+                        </li>
+                        <li class="nav-item" *ngIf="!isLoggedIn()">
+                            <a routerLink="/user/login" (click)="scrollTop()" routerLinkActive="active" class="nav-link">
+                                Login
                             </a>
                         </li>
                     </ul>
