--- a/client/src/app/modules/root-common/components/plan-details/plan-details.component.css
+++ b/client/src/app/modules/root-common/components/plan-details/plan-details.component.css
@@ -93,3 +93,11 @@ p [type=radio]:not(:checked)+label::after {
     -webkit-transform: scale(0);
     transform: scale(0);
 }
+
+
+
+.billing-totals .default-btn {
+    margin-top: 20px;
+    text-align: center;
+    width: 100%;
+}
