--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,3 +2,12 @@
 a {
     cursor: pointer;
 }
+
+.error-msg {
+    color: red;
+}
+
+.form-group.has-error input {
+    background: rgba(255,64,64,.2);
+    border: 1px solid #FF4040;
+}
