created account components

--- a/client/src/app/shared/components/ui-components/model/model.component.html
+++ b/client/src/app/shared/components/ui-components/model/model.component.html
@@ -17,7 +17,7 @@
                                                     <input type="text" formControlName="email" 
                                                         id="name"
                                                         class="form-control"
-                                                        placeholder="Email Address">
+                                                        placeholder="Email Address" [value]="emailInputValue">
                                                 </div>
                                             </div>
                                             <div class="col-12">
