--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -116,7 +116,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link">Shop</a>
+                                    <a class="nav-link" routerLink="/account/profile" (click)="scrollTop()">Profile</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">Cart</a>
@@ -171,6 +171,11 @@
                         <li class="nav-item" *ngIf="!isLoggedIn()">
                             <a routerLink="/user/login" (click)="scrollTop()" routerLinkActive="active" class="nav-link">
                                 Login
+                            </a>
+                        </li>
+                        <li class="nav-item" *ngIf="isLoggedIn()">
+                            <a (click)="onLogOut();scrollTop()" class="nav-link">
+                                Logout
                             </a>
                         </li>
                     </ul>
