--- a/client/src/app/modules/register/components/reset-password/request-reset/request-reset.component.html
+++ b/client/src/app/modules/register/components/reset-password/request-reset/request-reset.component.html
@@ -1,4 +1,4 @@
-<div class="inner-banner inner-bg9">
+<!-- <div class="inner-banner inner-bg9">
     <div class="container">
         <div class="inner-title text-center">
             <h3>Forgot Password</h3>
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-
+ -->
 
 <div class="user-area pt-100 pb-70">
     <div class="container">
@@ -26,11 +26,7 @@
                                     <div class="form-group">
                                         <input type="text" name="name"
                                             id="name"
-                                            class="form-control"
-                                            required data-error="Please
-                                            enter your Username or
-                                            Email" placeholder="Username
-                                            or Email">
+                                            class="form-control"placeholder="Email Address">
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12
