--- a/client/src/app/modules/register/components/user-login/user-login.component.html
+++ b/client/src/app/modules/register/components/user-login/user-login.component.html
@@ -1,4 +1,4 @@
-<div class="inner-banner inner-bg7">
+<!-- <div class="inner-banner inner-bg7">
     <div class="container">
         <div class="inner-title text-center">
             <h3>Log In</h3>
@@ -10,7 +10,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <div class="user-area pt-100 pb-70">
