--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -34,7 +34,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="header-item">
+                        <!-- <div class="header-item">
                             <a  class="cart-top-btn cart-top-btn-two">
                                 <i class='bx bx-shopping-bag'></i>
                                 <span>0</span>
@@ -62,7 +62,7 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -98,12 +98,12 @@
                 </a>
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a routerLink="/" (click)="scrollTop()" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
                                 Home
                             </a>
                             
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a routerLink="about" (click)="scrollTop()" routerLinkActive="active" class="nav-link">
                                 About
@@ -119,7 +119,7 @@
                                     <a class="nav-link" routerLink="/account/profile" (click)="scrollTop()">Profile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link">Cart</a>
+                                    <a class="nav-link" routerLink="/account/profile/my-orders" (click)="scrollTop()">My Orders</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">Checkout</a>
@@ -180,29 +180,29 @@
                         </li>
                     </ul>
                     <div class="others-options d-flex align-items-center">
-                        <div class="optional-item">
+                        <!-- <div class="optional-item">
                             <div class="search-btn">
                                 <a class="#" href="#searchmodal" data-bs-toggle="modal" data-bs-target="#searchmodal">
                                     <i class='bx bx-search'></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="optional-item">
                             <a class="default-btn two" routerLink="diet-plans" routerLinkActive="active" (click)="scrollTop()" [routerLinkActiveOptions]="{exact:true}">Diet Plans</a>
                         </div>
                     </div>
                     <div class="mobile-nav">
                         <div class="mobile-other d-flex align-items-center">
-                            <div class="optional-item">
+                            <!-- <div class="optional-item">
                                 <div class="search-btn">
                                     <a class="#" href="#searchmodal" data-bs-toggle="modal"
                                         data-bs-target="#searchmodal">
                                         <i class='bx bx-search'></i>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="optional-item">
-                                <a class="default-btn two">Appointment</a>
+                                <a class="default-btn two" routerLink="diet-plans" routerLinkActive="active" (click)="scrollTop()" [routerLinkActiveOptions]="{exact:true}">Diet Plans</a>
                             </div>
                         </div>
                     </div>
